--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-	<title>Moisés Guimarães</title>
+	<title>Adgenilson Brito</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<!--[if lte IE 8]><script src="assets/js/html5shiv.js"></script><![endif]-->
@@ -17,8 +17,8 @@
 		<section id="main">
 			<header>
 				<span class="avatar"><img src="images/avatar.jpg" alt="" /></span>
-				<h1>Moisés Guimarães</h1>
-				<p>Software Engineer</p>
+				<h1>Adgenilson Brito</h1>
+				<p>Student</p>
 			</header>
 
 			<footer>
