--- a/index.html
+++ b/index.html
@@ -23,17 +23,17 @@
 
 			<footer>
 				<ul class="icons">
-					<li><a href="https://github.com/moisesguimaraes" class="fa-github">Github</a></li>
-					<li><a href="https://www.instagram.com/mguimaraesm" class="fa-instagram">Instagram</a></li>
-					<li><a href="https://www.facebook.com/guimaraes.moises" class="fa-facebook">Facebook</a></li>
-					<li><a href="https://twitter.com/moisesguimaraes" class="fa-twitter">Twitter</a></li>
+					<li><a href="https://github.com/adgenilson" class="fa-github">Github</a></li>
+					<li><a href="https://www.instagram.com/brito_adg" class="fa-instagram">Instagram</a></li>
+					<li><a href="https://www.facebook.com/adgbrito" class="fa-facebook">Facebook</a></li>
+					<li><a href="https://twitter.com/brito_adg" class="fa-twitter">Twitter</a></li>
 				</ul>
 			</footer>
 		</section>
 
 		<footer id="footer">
 			<ul class="copyright">
-				<li>&copy; Moisés Guimarães</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+				<li>&copy; Adgenilson Silva </li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 			</ul>
 		</footer>
 	</div>
